--- a/05-css-grid/01-grid.css
+++ b/05-css-grid/01-grid.css
@@ -3,15 +3,50 @@
 }
 
 /* Grid Container 1 */
+.grid-container-1 {
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr;
+  gap: 10px;
+}
 
 /* Grid Container 2 */
-
+.grid-container-2 {
+  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr 1fr;
+  grid-template-rows: 1fr 5fr;
+  gap: 10px;
+}
 /* use height: 400px; on the container */
 
 /* Grid Container 3 */
-
+.grid-container-3 {
+  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 3fr 3fr;
+  grid-template-rows: 1fr 3fr 3fr;
+  gap: 10px;
+}
+.grid-container-3 .item8 {
+  grid-column: 2 / 4;
+  grid-row: 3 / 4;
+}
 /* use height: 400px; on the container */
 
 /* Grid Container 4 */
+.grid-container-4 {
+  height: 400px;
+  display: grid;
+  grid-template-columns: 1fr 5fr;
+  grid-template-rows: 2fr 1fr 1fr 1fr;
+  gap: 10px;
+}
 
+.grid-container-4 .item1 {
+  grid-row: span 2;
+}
+
+.grid-container-4 .item6 {
+  grid-column: span 2;
+}
 /* use height: 600px; on the container */
